--- a/package.json
+++ b/package.json
@@ -49,14 +49,17 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
+    "jest": "^29.7.0",
     "n8n-workflow": "^1.40.0",
     "prettier": "^3.1.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.3.0"
   },
   "peerDependencies": {
